update and add more content

--- a/account.html
+++ b/account.html
@@ -129,7 +129,7 @@
                     <div class="text-end">
                       <a class="btn btn-colors px-5">Update</a>
                   </div>
-                    <!-- simple code add -->
+                    <!-- simple code add and just add more content  -->
                       
                             <!-- <input class="form-control my-4 py-3" placeholder="E-mail">
                             <input class="form-control my-4 py-3" placeholder="Mobile">
